test/unit-tests/running/test-runner/run-test.spec.ts
// single test item run success

// timeout (normal)

// timeout (diff)

// error

// two test item run success

// first timeout (normal)

// second timeout (normal)

// first timeout (diff)

// second timeout (diff)

// first error

// second error
